[tool.poetry]
name = "dijon"
version = "0.3.0"
description = "dijon is a library for comparing and merging JSON data structures."
authors = ["artPlusPlus <artPlusPlus@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
pytest = "^4.5"
pylama = "^7.7"
mypy = "^0.701.0"
tox = "^3.12"
tox-venv = "^0.4.0"
coverage = "^4.5"
sphinx = "^2.0"
pytest-cov = "^2.7"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
